<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imgColor"
        android:layout_width="294dp"
        android:layout_height="410dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        app:srcCompat="@drawable/aa8cd8" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="159dp"
        android:layout_height="44dp"
        android:text="@string/lblEmail"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="211dp"
        android:layout_height="39dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtEmail"
        app:layout_constraintBottom_toTopOf="@+id/lblPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginEnd="174dp"
        android:layout_marginRight="174dp"
        android:text="@string/lblPass"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="207dp"
        android:layout_height="45dp"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPass" />

    <RadioGroup
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imgColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        app:layout_constraintVertical_bias="0.404">

        <RadioButton
            android:id="@+id/radST"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="Student"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radTU"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="Tutor"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnLogin2"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginTop="51dp"
        android:background="#AA8CD8"
        android:text="@string/btnLogin"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgColor"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>