...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/txtHours"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:textSize="25sp"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblHours"
        app:layout_constraintVertical_bias="0.676" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="#aa8cd8"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
...
